--- a/web/index.html
+++ b/web/index.html
@@ -9,4 +9,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="/static/ZuiBlog.js"></script>
 </html>
