--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
- 
+    <script src="/static/ZuiBlog.js"></script>
     <title>web</title>
   </head>
   <body>
